--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
+/* style.css */
 
+body {
+  background-color: white;
+  font-family: "Courier New", Courier, monospace;
+  color: black; /* optional, ensures text is visible on white */
+  margin: 0;
+  padding: 1em;
+}
