--- a/style.css
+++ b/style.css
@@ -7,3 +7,7 @@ body {
   margin: 0;
   padding: 1em;
 }
+
+body, p, h1, h2, h3, h4, h5, h6, div, span {
+  font-family: "Courier New", Courier, monospace;
+}
